[tool.poetry]
name = "cmsc508-fa2023-topic-joins"
version = "0.1.0"
description = ""
authors = ["John Leonard <john@lowkeylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
